--- a/home.html
+++ b/home.html
@@ -6,6 +6,6 @@ This is HTML page
 </title>
 </head>
 <body>
-	<h1>This is HOME page</h1>
+	<h1>this is the change made by abhishek 13</h1>
 </body>
 </html>
